# adk_scaffold

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  __init__.py  agent.py  config.py  logging_config.py  prompts.py  pyproject.toml
adk_agent/: .env.template  __init__.py  agent.json  config.py  logging_config.py  main.py
adk_agent/agent/: __init__.py  agent.py  config.py  prompts.py
adk_agent/agent/sub_agents/: __init__.py
adk_agent/agent/sub_agents/db_agent/: agent.py  config.py  prompts.py
adk_agent/agent/tools/: toolset.py
adk_agent/core/: __init__.py  base_config.py  logging_config.py
agent/: agent.py
agent/tools/: toolset.py
app/: .env.template  __init__.py  config.py  main.py  prompts.py
app/agent/: agent.py
scripts/: adk_scaffold.sh  install.sh
