[project]
name = "adk-agent"
version = "0.1.0"
description = "Production-ready ADK agent template with observability, authentication and A2A support."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core ADK framework with agent-to-agent communication support
    "google-adk[a2a]>=1.16.0",

    # Observability and monitoring
    "langfuse>=3.6.2",
    "openinference-instrumentation-google-adk>=0.1.6",

    # LLM proxy support (for multi-provider model access)
    "litellm>=1.77.7",

    # Configuration and environment management
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",

    # Web server
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# Production deployment dependencies
prod = [
    "gunicorn>=21.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
